# django_ninja_sample

./: .gitignore  docker-compose.yml  pyproject.toml
api/: admin.py  api_v1.py  api_v1_schema.py  models.py  urls.py
api/migrations/: 0001_initial.py  0002_initial.py
api_demo/: asgi.py  settings.py  urls.py  wsgi.py
